json data update

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "genius-car-mechanics"
-  }
+    "default": "genius-car-mechanics",
+    "genius-car-mechanics-55ab6  ": "genius-car-mechanics-55ab6"
+  },
+  "targets": {},
+  "etags": {}
 }
